--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "json_server_for_worldwise",
+  "name": "project_data",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "json-serve": "^0.1.0",
-    "json-server": "^0.17.4",
-    "nodemon": "^3.0.2"
+    "json-server": "^0.17.1"
   }
 }
